--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@mui/material": "^5.13.4",
     "axios": "^0.27.2",
+    "ethereum-cryptography": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
